// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HostResultState > should render HostResultState with question type multi-choice and four answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
        >
          <button
            data-testid="test-fullscreen-button-button"
            id="fullscreen-button"
            name="fullscreen-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-maximize "
              data-icon="maximize"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M168 32L24 32C10.7 32 0 42.7 0 56L0 200c0 9.7 5.8 18.5 14.8 22.2S34.1 223.8 41 217l40-40 79 79-79 79-40-40c-6.9-6.9-17.2-8.9-26.2-5.2S0 302.3 0 312L0 456c0 13.3 10.7 24 24 24l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-40-40 79-79 79 79-40 40c-6.9 6.9-8.9 17.2-5.2 26.2S270.3 480 280 480l144 0c13.3 0 24-10.7 24-24l0-144c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2l-40 40-79-79 79-79 40 40c6.9 6.9 17.2 8.9 26.2 5.2S448 209.7 448 200l0-144c0-13.3-10.7-24-24-24L280 32c-9.7 0-18.5 5.8-22.2 14.8S256.2 66.1 263 73l40 40-79 79-79-79 40-40c6.9-6.9 8.9-17.2 5.2-26.2S177.7 32 168 32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            id="next-button"
            name="next-button"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="typography subtitle full"
          >
            Who painted The Starry Night?
          </div>
          <div
            class="questionResults"
          >
            <div
              class="chips"
            >
              <div
                class="chip correct"
              >
                Vincent van Gogh
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  3
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-xmark icon"
                    data-icon="circle-xmark"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM167 167c9.4-9.4 24.6-9.4 33.9 0l55 55 55-55c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-55 55 55 55c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-55-55-55 55c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l55-55-55-55c-9.4-9.4-9.4-24.6 0-33.9z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="chips"
            >
              <div
                class="chip incorrect"
              >
                Claude Monet
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  5
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="chip incorrect"
              >
                Pablo Picasso
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  2
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="chip incorrect"
              >
                Leonardo da Vinci
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  0
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open "
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HostResultState > should render HostResultState with question type multi-choice and six answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
        >
          <button
            data-testid="test-fullscreen-button-button"
            id="fullscreen-button"
            name="fullscreen-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-maximize "
              data-icon="maximize"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M168 32L24 32C10.7 32 0 42.7 0 56L0 200c0 9.7 5.8 18.5 14.8 22.2S34.1 223.8 41 217l40-40 79 79-79 79-40-40c-6.9-6.9-17.2-8.9-26.2-5.2S0 302.3 0 312L0 456c0 13.3 10.7 24 24 24l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-40-40 79-79 79 79-40 40c-6.9 6.9-8.9 17.2-5.2 26.2S270.3 480 280 480l144 0c13.3 0 24-10.7 24-24l0-144c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2l-40 40-79-79 79-79 40 40c6.9 6.9 17.2 8.9 26.2 5.2S448 209.7 448 200l0-144c0-13.3-10.7-24-24-24L280 32c-9.7 0-18.5 5.8-22.2 14.8S256.2 66.1 263 73l40 40-79 79-79-79 40-40c6.9-6.9 8.9-17.2 5.2-26.2S177.7 32 168 32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            id="next-button"
            name="next-button"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="typography subtitle full"
          >
            Who painted The Starry Night?
          </div>
          <div
            class="questionResults"
          >
            <div
              class="chips"
            >
              <div
                class="chip correct"
              >
                Vincent van Gogh
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-xmark icon"
                    data-icon="circle-xmark"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM167 167c9.4-9.4 24.6-9.4 33.9 0l55 55 55-55c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-55 55 55 55c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-55-55-55 55c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l55-55-55-55c-9.4-9.4-9.4-24.6 0-33.9z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="chips"
            >
              <div
                class="chip incorrect"
              >
                Leonardo da Vinci
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  4
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="chip incorrect"
              >
                Rembrandt
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  3
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="chip incorrect"
              >
                Pablo Picasso
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  2
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="chip incorrect"
              >
                Claude Monet
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  0
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="chip incorrect"
              >
                Michelangelo
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  0
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open "
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HostResultState > should render HostResultState with question type multi-choice and two answers 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
        >
          <button
            data-testid="test-fullscreen-button-button"
            id="fullscreen-button"
            name="fullscreen-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-maximize "
              data-icon="maximize"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M168 32L24 32C10.7 32 0 42.7 0 56L0 200c0 9.7 5.8 18.5 14.8 22.2S34.1 223.8 41 217l40-40 79 79-79 79-40-40c-6.9-6.9-17.2-8.9-26.2-5.2S0 302.3 0 312L0 456c0 13.3 10.7 24 24 24l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-40-40 79-79 79 79-40 40c-6.9 6.9-8.9 17.2-5.2 26.2S270.3 480 280 480l144 0c13.3 0 24-10.7 24-24l0-144c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2l-40 40-79-79 79-79 40 40c6.9 6.9 17.2 8.9 26.2 5.2S448 209.7 448 200l0-144c0-13.3-10.7-24-24-24L280 32c-9.7 0-18.5 5.8-22.2 14.8S256.2 66.1 263 73l40 40-79 79-79-79 40-40c6.9-6.9 8.9-17.2 5.2-26.2S177.7 32 168 32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            id="next-button"
            name="next-button"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="typography subtitle full"
          >
            Who painted The Starry Night?
          </div>
          <div
            class="questionResults"
          >
            <div
              class="chips"
            >
              <div
                class="chip correct"
              >
                Vincent van Gogh
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  3
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-xmark icon"
                    data-icon="circle-xmark"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM167 167c9.4-9.4 24.6-9.4 33.9 0l55 55 55-55c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-55 55 55 55c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-55-55-55 55c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l55-55-55-55c-9.4-9.4-9.4-24.6 0-33.9z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="chips"
            >
              <div
                class="chip incorrect"
              >
                Pablo Picasso
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  7
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open "
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HostResultState > should render HostResultState with question type range 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
        >
          <button
            data-testid="test-fullscreen-button-button"
            id="fullscreen-button"
            name="fullscreen-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-maximize "
              data-icon="maximize"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M168 32L24 32C10.7 32 0 42.7 0 56L0 200c0 9.7 5.8 18.5 14.8 22.2S34.1 223.8 41 217l40-40 79 79-79 79-40-40c-6.9-6.9-17.2-8.9-26.2-5.2S0 302.3 0 312L0 456c0 13.3 10.7 24 24 24l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-40-40 79-79 79 79-40 40c-6.9 6.9-8.9 17.2-5.2 26.2S270.3 480 280 480l144 0c13.3 0 24-10.7 24-24l0-144c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2l-40 40-79-79 79-79 40 40c6.9 6.9 17.2 8.9 26.2 5.2S448 209.7 448 200l0-144c0-13.3-10.7-24-24-24L280 32c-9.7 0-18.5 5.8-22.2 14.8S256.2 66.1 263 73l40 40-79 79-79-79 40-40c6.9-6.9 8.9-17.2 5.2-26.2S177.7 32 168 32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            id="next-button"
            name="next-button"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="typography subtitle full"
          >
            What percentage of the earth's surface is covered by water?
          </div>
          <div
            class="questionResults"
          >
            <div
              class="chips"
            >
              <div
                class="chip correct"
              >
                71
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  2
                </span>
              </div>
            </div>
            <div
              class="chips"
            >
              <div
                class="chip incorrect"
              >
                59
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
              </div>
              <div
                class="chip incorrect"
              >
                61
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
              </div>
              <div
                class="chip incorrect"
              >
                64
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
              </div>
              <div
                class="chip incorrect"
              >
                65
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
              </div>
              <div
                class="chip incorrect"
              >
                72
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
              </div>
              <div
                class="chip incorrect"
              >
                73
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
              </div>
              <div
                class="chip incorrect"
              >
                79
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
              </div>
              <div
                class="chip incorrect"
              >
                83
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open "
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HostResultState > should render HostResultState with question type true false 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
        >
          <button
            data-testid="test-fullscreen-button-button"
            id="fullscreen-button"
            name="fullscreen-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-maximize "
              data-icon="maximize"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M168 32L24 32C10.7 32 0 42.7 0 56L0 200c0 9.7 5.8 18.5 14.8 22.2S34.1 223.8 41 217l40-40 79 79-79 79-40-40c-6.9-6.9-17.2-8.9-26.2-5.2S0 302.3 0 312L0 456c0 13.3 10.7 24 24 24l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-40-40 79-79 79 79-40 40c-6.9 6.9-8.9 17.2-5.2 26.2S270.3 480 280 480l144 0c13.3 0 24-10.7 24-24l0-144c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2l-40 40-79-79 79-79 40 40c6.9 6.9 17.2 8.9 26.2 5.2S448 209.7 448 200l0-144c0-13.3-10.7-24-24-24L280 32c-9.7 0-18.5 5.8-22.2 14.8S256.2 66.1 263 73l40 40-79 79-79-79 40-40c6.9-6.9 8.9-17.2 5.2-26.2S177.7 32 168 32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            id="next-button"
            name="next-button"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="typography subtitle full"
          >
            Rabbits can't vomit?
          </div>
          <div
            class="questionResults"
          >
            <div
              class="chips"
            >
              <div
                class="chip correct"
              >
                True
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  4
                </span>
              </div>
            </div>
            <div
              class="chips"
            >
              <div
                class="chip incorrect"
              >
                False
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open "
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HostResultState > should render HostResultState with question type type answer 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
        >
          <button
            data-testid="test-fullscreen-button-button"
            id="fullscreen-button"
            name="fullscreen-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-maximize "
              data-icon="maximize"
              data-prefix="fas"
              role="img"
              viewBox="0 0 448 512"
            >
              <path
                d="M168 32L24 32C10.7 32 0 42.7 0 56L0 200c0 9.7 5.8 18.5 14.8 22.2S34.1 223.8 41 217l40-40 79 79-79 79-40-40c-6.9-6.9-17.2-8.9-26.2-5.2S0 302.3 0 312L0 456c0 13.3 10.7 24 24 24l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-40-40 79-79 79 79-40 40c-6.9 6.9-8.9 17.2-5.2 26.2S270.3 480 280 480l144 0c13.3 0 24-10.7 24-24l0-144c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2l-40 40-79-79 79-79 40 40c6.9 6.9 17.2 8.9 26.2 5.2S448 209.7 448 200l0-144c0-13.3-10.7-24-24-24L280 32c-9.7 0-18.5 5.8-22.2 14.8S256.2 66.1 263 73l40 40-79 79-79-79 40-40c6.9-6.9 8.9-17.2 5.2-26.2S177.7 32 168 32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-next-button-button"
            id="next-button"
            name="next-button"
            type="button"
          >
            <span>
              Next
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-105.4 105.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="typography subtitle full"
          >
            Who painted the Mono Lisa?
          </div>
          <div
            class="questionResults"
          >
            <div
              class="chips"
            >
              <div
                class="chip correct"
              >
                leonardo da vinci
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  2
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-xmark icon"
                    data-icon="circle-xmark"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM167 167c9.4-9.4 24.6-9.4 33.9 0l55 55 55-55c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-55 55 55 55c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-55-55-55 55c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l55-55-55-55c-9.4-9.4-9.4-24.6 0-33.9z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="chips"
            >
              <div
                class="chip incorrect"
              >
                leonardo
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  4
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="chip incorrect"
              >
                picasso
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  3
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="chip incorrect"
              >
                rembrandt
                <span>
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-user-group "
                    data-icon="user-group"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 576 512"
                  >
                    <path
                      d="M64 128a112 112 0 1 1 224 0 112 112 0 1 1 -224 0zM0 464c0-97.2 78.8-176 176-176s176 78.8 176 176l0 6c0 23.2-18.8 42-42 42L42 512c-23.2 0-42-18.8-42-42l0-6zM432 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zm0 240c79.5 0 144 64.5 144 144l0 22.4c0 23-18.6 41.6-41.6 41.6l-144.8 0c6.6-12.5 10.4-26.8 10.4-42l0-6c0-51.5-17.4-98.9-46.5-136.7 22.6-14.7 49.6-23.3 78.5-23.3z"
                      fill="currentColor"
                    />
                  </svg>
                   
                  1
                </span>
                <button
                  class="buttonOverlay"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check icon"
                    data-icon="circle-check"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footer"
    >
      <div
        class="main"
      >
        <div
          class="questions"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-circle-question "
            data-icon="circle-question"
            data-prefix="fas"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm0-336c-17.7 0-32 14.3-32 32 0 13.3-10.7 24-24 24s-24-10.7-24-24c0-44.2 35.8-80 80-80s80 35.8 80 80c0 47.2-36 67.2-56 74.5l0 3.8c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-8.1c0-20.5 14.8-35.2 30.1-40.2 6.4-2.1 13.2-5.5 18.2-10.3 4.3-4.2 7.7-10 7.7-19.6 0-17.7-14.3-32-32-32zM224 368a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"
              fill="currentColor"
            />
          </svg>
          <span>
            1
             / 
            20
          </span>
        </div>
        <div
          class="gamePIN"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-lock-open "
            data-icon="lock-open"
            data-prefix="fas"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M384 96c0-35.3 28.7-64 64-64s64 28.7 64 64l0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-70.7-57.3-128-128-128S320 25.3 320 96l0 64-160 0c-35.3 0-64 28.7-64 64l0 224c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-224c0-35.3-28.7-64-64-64l-32 0 0-64z"
              fill="currentColor"
            />
          </svg>
          <span>
            123456
          </span>
        </div>
        <div
          class="actions"
        />
      </div>
    </div>
  </div>
</div>
`;
